# Cotton

./: .clang-format  .editorconfig  CMakeLists.txt  LICENSE
Include/Cotton/Core/: Attributes.h  FeatureChecks.h  Predefined.h  Types.h
Include/Cotton/Core/Details/: Architecture.h  Compiler.h  Endian.h  LanguageVersion.h  OperatingSystem.h  SIMD.h
Include/Cotton/Debug/: SourceLocation.h
Include/Cotton/Error/: Panic.h
Include/Cotton/Error/Details/: GeneralPanicHook.h  LinuxPanicHook.h  WindowsPanicHook.h
Include/Cotton/Iterator/: IterConcepts.h
Include/Cotton/Meta/: Concepts.h  IsConstantEvaluated.h  TypeTraits.h  TypeTransforms.h
Include/Cotton/Meta/Details/: ArrayTransforms.h  Comparisons.h  Conditionals.h  Conversions.h  Decay.h  HasOperator.h  IntTypes.h  IsArithmetic.h  IsArray.h  IsAssignable.h  IsBaseOf.h  IsCategory.h  IsConstructible.h  IsDestructible.h  IsFunction.h  IsPointer.h  IsProperty.h  IsQualifier.h  IsReference.h  IsSign.h  IsType.h  IsTypeCategory.h  PointerTransforms.h  QualifierTransforms.h  ReferenceTransforms.h  SignTransforms.h  TypeConstant.h  UnderlyingType.h
Include/Cotton/String/: CharTraits.h
Include/Cotton/Utility/: Exchange.h  Forward.h  Move.h  Swap.h
Source/: Temp.cpp
Source/Core/: PolicyCheck.cpp
Source/Error/: Panic.cpp
Tests/: CMakeLists.txt
Tests/Debug/: TestSourceLoc.cpp
Tests/Include/: CottonTest.h
Tests/Iterator/: TestIterConcepts.cpp
Tests/Meta/: TestConcepts.cpp  TestExTypeOps.cpp  TestIsConstEvaluated.cpp  TestTypeOps.cpp  TestTypeTraits.cpp  TestTypeTransforms.cpp
Tests/String/: TestCharTraits.cpp
Tests/Utility/: TestExchange.cpp  TestSwap.cpp
